// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the flag-off scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,664])",
  "strokeStyle=#111",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,664])",
  "moveTo([12.5,0])",
  "lineTo([12.5,664])",
  "moveTo([24.5,0])",
  "lineTo([24.5,664])",
  "moveTo([36.5,0])",
  "lineTo([36.5,664])",
  "moveTo([48.5,0])",
  "lineTo([48.5,664])",
  "moveTo([60.5,0])",
  "lineTo([60.5,664])",
  "moveTo([72.5,0])",
  "lineTo([72.5,664])",
  "moveTo([84.5,0])",
  "lineTo([84.5,664])",
  "moveTo([96.5,0])",
  "lineTo([96.5,664])",
  "moveTo([108.5,0])",
  "lineTo([108.5,664])",
  "moveTo([120.5,0])",
  "lineTo([120.5,664])",
  "moveTo([132.5,0])",
  "lineTo([132.5,664])",
  "moveTo([144.5,0])",
  "lineTo([144.5,664])",
  "moveTo([156.5,0])",
  "lineTo([156.5,664])",
  "moveTo([168.5,0])",
  "lineTo([168.5,664])",
  "moveTo([180.5,0])",
  "lineTo([180.5,664])",
  "moveTo([192.5,0])",
  "lineTo([192.5,664])",
  "moveTo([204.5,0])",
  "lineTo([204.5,664])",
  "moveTo([216.5,0])",
  "lineTo([216.5,664])",
  "moveTo([228.5,0])",
  "lineTo([228.5,664])",
  "moveTo([240.5,0])",
  "lineTo([240.5,664])",
  "moveTo([252.5,0])",
  "lineTo([252.5,664])",
  "moveTo([264.5,0])",
  "lineTo([264.5,664])",
  "moveTo([276.5,0])",
  "lineTo([276.5,664])",
  "moveTo([288.5,0])",
  "lineTo([288.5,664])",
  "moveTo([300.5,0])",
  "lineTo([300.5,664])",
  "moveTo([312.5,0])",
  "lineTo([312.5,664])",
  "moveTo([324.5,0])",
  "lineTo([324.5,664])",
  "moveTo([336.5,0])",
  "lineTo([336.5,664])",
  "moveTo([348.5,0])",
  "lineTo([348.5,664])",
  "moveTo([360.5,0])",
  "lineTo([360.5,664])",
  "moveTo([372.5,0])",
  "lineTo([372.5,664])",
  "moveTo([384.5,0])",
  "lineTo([384.5,664])",
  "moveTo([396.5,0])",
  "lineTo([396.5,664])",
  "moveTo([408.5,0])",
  "lineTo([408.5,664])",
  "moveTo([420.5,0])",
  "lineTo([420.5,664])",
  "moveTo([432.5,0])",
  "lineTo([432.5,664])",
  "moveTo([444.5,0])",
  "lineTo([444.5,664])",
  "moveTo([456.5,0])",
  "lineTo([456.5,664])",
  "moveTo([468.5,0])",
  "lineTo([468.5,664])",
  "moveTo([480.5,0])",
  "lineTo([480.5,664])",
  "moveTo([492.5,0])",
  "lineTo([492.5,664])",
  "moveTo([504.5,0])",
  "lineTo([504.5,664])",
  "moveTo([516.5,0])",
  "lineTo([516.5,664])",
  "moveTo([528.5,0])",
  "lineTo([528.5,664])",
  "moveTo([540.5,0])",
  "lineTo([540.5,664])",
  "moveTo([552.5,0])",
  "lineTo([552.5,664])",
  "moveTo([564.5,0])",
  "lineTo([564.5,664])",
  "moveTo([576.5,0])",
  "lineTo([576.5,664])",
  "moveTo([588.5,0])",
  "lineTo([588.5,664])",
  "moveTo([600.5,0])",
  "lineTo([600.5,664])",
  "moveTo([612.5,0])",
  "lineTo([612.5,664])",
  "moveTo([624.5,0])",
  "lineTo([624.5,664])",
  "moveTo([636.5,0])",
  "lineTo([636.5,664])",
  "moveTo([648.5,0])",
  "lineTo([648.5,664])",
  "moveTo([660.5,0])",
  "lineTo([660.5,664])",
  "moveTo([672.5,0])",
  "lineTo([672.5,664])",
  "moveTo([684.5,0])",
  "lineTo([684.5,664])",
  "moveTo([696.5,0])",
  "lineTo([696.5,664])",
  "moveTo([708.5,0])",
  "lineTo([708.5,664])",
  "moveTo([720.5,0])",
  "lineTo([720.5,664])",
  "moveTo([732.5,0])",
  "lineTo([732.5,664])",
  "moveTo([744.5,0])",
  "lineTo([744.5,664])",
  "moveTo([756.5,0])",
  "lineTo([756.5,664])",
  "moveTo([768.5,0])",
  "lineTo([768.5,664])",
  "moveTo([780.5,0])",
  "lineTo([780.5,664])",
  "moveTo([792.5,0])",
  "lineTo([792.5,664])",
  "moveTo([804.5,0])",
  "lineTo([804.5,664])",
  "moveTo([60.5,0])",
  "lineTo([60.5,664])",
  "moveTo([432.5,0])",
  "lineTo([432.5,664])",
  "moveTo([768.5,0])",
  "lineTo([768.5,664])",
  "moveTo([60.5,0])",
  "lineTo([60.5,664])",
  "stroke([])",
  "strokeStyle=#9c9c9c",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0,-11.5])",
  "lineTo([800,-11.5])",
  "moveTo([0,40.5])",
  "lineTo([800,40.5])",
  "moveTo([0,92.5])",
  "lineTo([800,92.5])",
  "moveTo([0,144.5])",
  "lineTo([800,144.5])",
  "moveTo([0,196.5])",
  "lineTo([800,196.5])",
  "moveTo([0,248.5])",
  "lineTo([800,248.5])",
  "moveTo([0,300.5])",
  "lineTo([800,300.5])",
  "moveTo([0,352.5])",
  "lineTo([800,352.5])",
  "moveTo([0,404.5])",
  "lineTo([800,404.5])",
  "moveTo([0,456.5])",
  "lineTo([800,456.5])",
  "moveTo([0,508.5])",
  "lineTo([800,508.5])",
  "moveTo([0,560.5])",
  "lineTo([800,560.5])",
  "moveTo([0,612.5])",
  "lineTo([800,612.5])",
  "moveTo([0,664.5])",
  "lineTo([800,664.5])",
  "stroke([])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([72,118])",
  "lineTo([60,118])",
  "lineTo([60,170])",
  "lineTo([72,170])",
  "moveTo([120,222])",
  "lineTo([132,222])",
  "lineTo([132,482])",
  "lineTo([113,482])",
  "stroke([])",
  "setLineDash([[]])",
  "lineWidth=2",
  "beginPath([])",
  "moveTo([120,66])",
  "lineTo([132,66])",
  "lineTo([132,118])",
  "lineTo([72,118])",
  "moveTo([120,170])",
  "lineTo([132,170])",
  "lineTo([132,222])",
  "lineTo([120,222])",
  "stroke([])",
  "lineWidth=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,63.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,115.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[]])",
  "strokeRect([72.75,116.25,46.5,3.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "fillRect([72,167.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[3,2]])",
  "strokeRect([72.75,168.25,46.5,3.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,219.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,271.5,48,5])",
  "globalAlpha=1",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,266.5])",
  "lineTo([75.5,266.5])",
  "lineTo([72,271.5])",
  "fill([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,323.5,48,5])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([73,331.5])",
  "lineTo([79,331.5])",
  "lineTo([76,324.5])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([73,331.5])",
  "lineTo([79,331.5])",
  "lineTo([76,324.5])",
  "lineTo([73,331.5])",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,375.5,48,5])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "fillRect([95,369.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,370,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,367.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,368,4,4])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,427.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([120,475])",
  "lineTo([127,482])",
  "lineTo([120,489])",
  "lineTo([113,482])",
  "fill([])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,531.5,48,5])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,583.5,48,5])",
  "globalAlpha=1",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A100 Excavate",96,54.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A110 Piling",96,106.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A120 Steel",96,158.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A130 Cladding",96,210.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A140 Fit-out",96,262.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A150 M&E",96,314.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A160 Roof",96,366.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A170 Crane",96,418.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["M1 Handover",120,470.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["LOE Supervision",96,522.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["Substructure",96,574.5])",
  "textAlign=left",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the maximal scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,664])",
  "fillStyle=#111111",
  "fillRect([0,0,60,664])",
  "fillRect([432,0,336,664])",
  "fillStyle=#222",
  "fillRect([12,0,12,664])",
  "fillRect([84,0,12,664])",
  "fillRect([96,0,12,664])",
  "fillRect([168,0,12,664])",
  "fillRect([180,0,12,664])",
  "fillRect([252,0,12,664])",
  "fillRect([264,0,12,664])",
  "fillRect([336,0,12,664])",
  "fillRect([348,0,12,664])",
  "fillRect([420,0,12,664])",
  "fillRect([432,0,12,664])",
  "fillRect([504,0,12,664])",
  "fillRect([516,0,12,664])",
  "fillRect([588,0,12,664])",
  "fillRect([600,0,12,664])",
  "fillRect([672,0,12,664])",
  "fillRect([684,0,12,664])",
  "fillRect([756,0,12,664])",
  "fillRect([768,0,12,664])",
  "strokeStyle=#3a3a3a",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,664])",
  "moveTo([12.5,0])",
  "lineTo([12.5,664])",
  "moveTo([24.5,0])",
  "lineTo([24.5,664])",
  "moveTo([36.5,0])",
  "lineTo([36.5,664])",
  "moveTo([48.5,0])",
  "lineTo([48.5,664])",
  "moveTo([60.5,0])",
  "lineTo([60.5,664])",
  "moveTo([72.5,0])",
  "lineTo([72.5,664])",
  "moveTo([84.5,0])",
  "lineTo([84.5,664])",
  "moveTo([96.5,0])",
  "lineTo([96.5,664])",
  "moveTo([108.5,0])",
  "lineTo([108.5,664])",
  "moveTo([120.5,0])",
  "lineTo([120.5,664])",
  "moveTo([132.5,0])",
  "lineTo([132.5,664])",
  "moveTo([144.5,0])",
  "lineTo([144.5,664])",
  "moveTo([156.5,0])",
  "lineTo([156.5,664])",
  "moveTo([168.5,0])",
  "lineTo([168.5,664])",
  "moveTo([180.5,0])",
  "lineTo([180.5,664])",
  "moveTo([192.5,0])",
  "lineTo([192.5,664])",
  "moveTo([204.5,0])",
  "lineTo([204.5,664])",
  "moveTo([216.5,0])",
  "lineTo([216.5,664])",
  "moveTo([228.5,0])",
  "lineTo([228.5,664])",
  "moveTo([240.5,0])",
  "lineTo([240.5,664])",
  "moveTo([252.5,0])",
  "lineTo([252.5,664])",
  "moveTo([264.5,0])",
  "lineTo([264.5,664])",
  "moveTo([276.5,0])",
  "lineTo([276.5,664])",
  "moveTo([288.5,0])",
  "lineTo([288.5,664])",
  "moveTo([300.5,0])",
  "lineTo([300.5,664])",
  "moveTo([312.5,0])",
  "lineTo([312.5,664])",
  "moveTo([324.5,0])",
  "lineTo([324.5,664])",
  "moveTo([336.5,0])",
  "lineTo([336.5,664])",
  "moveTo([348.5,0])",
  "lineTo([348.5,664])",
  "moveTo([360.5,0])",
  "lineTo([360.5,664])",
  "moveTo([372.5,0])",
  "lineTo([372.5,664])",
  "moveTo([384.5,0])",
  "lineTo([384.5,664])",
  "moveTo([396.5,0])",
  "lineTo([396.5,664])",
  "moveTo([408.5,0])",
  "lineTo([408.5,664])",
  "moveTo([420.5,0])",
  "lineTo([420.5,664])",
  "moveTo([432.5,0])",
  "lineTo([432.5,664])",
  "moveTo([444.5,0])",
  "lineTo([444.5,664])",
  "moveTo([456.5,0])",
  "lineTo([456.5,664])",
  "moveTo([468.5,0])",
  "lineTo([468.5,664])",
  "moveTo([480.5,0])",
  "lineTo([480.5,664])",
  "moveTo([492.5,0])",
  "lineTo([492.5,664])",
  "moveTo([504.5,0])",
  "lineTo([504.5,664])",
  "moveTo([516.5,0])",
  "lineTo([516.5,664])",
  "moveTo([528.5,0])",
  "lineTo([528.5,664])",
  "moveTo([540.5,0])",
  "lineTo([540.5,664])",
  "moveTo([552.5,0])",
  "lineTo([552.5,664])",
  "moveTo([564.5,0])",
  "lineTo([564.5,664])",
  "moveTo([576.5,0])",
  "lineTo([576.5,664])",
  "moveTo([588.5,0])",
  "lineTo([588.5,664])",
  "moveTo([600.5,0])",
  "lineTo([600.5,664])",
  "moveTo([612.5,0])",
  "lineTo([612.5,664])",
  "moveTo([624.5,0])",
  "lineTo([624.5,664])",
  "moveTo([636.5,0])",
  "lineTo([636.5,664])",
  "moveTo([648.5,0])",
  "lineTo([648.5,664])",
  "moveTo([660.5,0])",
  "lineTo([660.5,664])",
  "moveTo([672.5,0])",
  "lineTo([672.5,664])",
  "moveTo([684.5,0])",
  "lineTo([684.5,664])",
  "moveTo([696.5,0])",
  "lineTo([696.5,664])",
  "moveTo([708.5,0])",
  "lineTo([708.5,664])",
  "moveTo([720.5,0])",
  "lineTo([720.5,664])",
  "moveTo([732.5,0])",
  "lineTo([732.5,664])",
  "moveTo([744.5,0])",
  "lineTo([744.5,664])",
  "moveTo([756.5,0])",
  "lineTo([756.5,664])",
  "moveTo([768.5,0])",
  "lineTo([768.5,664])",
  "moveTo([780.5,0])",
  "lineTo([780.5,664])",
  "moveTo([792.5,0])",
  "lineTo([792.5,664])",
  "moveTo([804.5,0])",
  "lineTo([804.5,664])",
  "stroke([])",
  "strokeStyle=#111111",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,664])",
  "moveTo([432.5,0])",
  "lineTo([432.5,664])",
  "moveTo([768.5,0])",
  "lineTo([768.5,664])",
  "stroke([])",
  "strokeStyle=#565656",
  "lineWidth=2",
  "beginPath([])",
  "moveTo([60,0])",
  "lineTo([60,664])",
  "stroke([])",
  "strokeStyle=#9c9c9c",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0,-11.5])",
  "lineTo([800,-11.5])",
  "moveTo([0,40.5])",
  "lineTo([800,40.5])",
  "moveTo([0,92.5])",
  "lineTo([800,92.5])",
  "moveTo([0,144.5])",
  "lineTo([800,144.5])",
  "moveTo([0,196.5])",
  "lineTo([800,196.5])",
  "moveTo([0,248.5])",
  "lineTo([800,248.5])",
  "moveTo([0,300.5])",
  "lineTo([800,300.5])",
  "moveTo([0,352.5])",
  "lineTo([800,352.5])",
  "moveTo([0,404.5])",
  "lineTo([800,404.5])",
  "moveTo([0,456.5])",
  "lineTo([800,456.5])",
  "moveTo([0,508.5])",
  "lineTo([800,508.5])",
  "moveTo([0,560.5])",
  "lineTo([800,560.5])",
  "moveTo([0,612.5])",
  "lineTo([800,612.5])",
  "moveTo([0,664.5])",
  "lineTo([800,664.5])",
  "stroke([])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([120,222])",
  "lineTo([132,222])",
  "lineTo([132,482])",
  "lineTo([113,482])",
  "stroke([])",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([113,482])",
  "lineTo([121,479])",
  "lineTo([121,485])",
  "lineTo([113,482])",
  "fill([])",
  "setLineDash([[]])",
  "lineWidth=2",
  "beginPath([])",
  "stroke([])",
  "lineWidth=1",
  "strokeStyle=#0af",
  "lineWidth=2",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([120,118])",
  "lineTo([60,118])",
  "lineTo([60,170])",
  "lineTo([72,170])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([72,170])",
  "lineTo([64,173])",
  "lineTo([64,167])",
  "lineTo([72,170])",
  "fill([])",
  "setLineDash([[]])",
  "lineWidth=3",
  "beginPath([])",
  "moveTo([120,66])",
  "lineTo([132,66])",
  "lineTo([132,118])",
  "lineTo([72,118])",
  "moveTo([120,170])",
  "lineTo([132,170])",
  "lineTo([132,222])",
  "lineTo([84,222])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([72,118])",
  "lineTo([80,115])",
  "lineTo([80,121])",
  "lineTo([72,118])",
  "moveTo([84,222])",
  "lineTo([92,219])",
  "lineTo([92,225])",
  "lineTo([84,222])",
  "fill([])",
  "lineWidth=1",
  "strokeStyle=#333",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "strokeRect([84.5,116,59,4])",
  "setLineDash([[]])",
  "globalAlpha=0.18",
  "fillStyle=#44f",
  "fillRect([72,63.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,61,10,10])",
  "strokeRect([115,61,10,10])",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,115.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1",
  "fillRect([67,113,10,10])",
  "strokeRect([67,113,10,10])",
  "fillRect([115,113,10,10])",
  "strokeRect([115,113,10,10])",
  "globalAlpha=1",
  "fillStyle=#0c8",
  "fillRect([72,167.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1",
  "fillRect([67,165,10,10])",
  "strokeRect([67,165,10,10])",
  "fillRect([115,165,10,10])",
  "strokeRect([115,165,10,10])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,219.5,48,5])",
  "fillStyle=#fff",
  "fillRect([72,219.5,21.6,5])",
  "fillRect([93.1,217.5,1,9])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,217,10,10])",
  "strokeRect([115,217,10,10])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,271.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,269,10,10])",
  "strokeRect([115,269,10,10])",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,266.5])",
  "lineTo([75.5,266.5])",
  "lineTo([72,271.5])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([68.5,266.5])",
  "lineTo([75.5,266.5])",
  "lineTo([72,271.5])",
  "lineTo([68.5,266.5])",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,323.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,321,10,10])",
  "strokeRect([115,321,10,10])",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([73,331.5])",
  "lineTo([79,331.5])",
  "lineTo([76,324.5])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([73,331.5])",
  "lineTo([79,331.5])",
  "lineTo([76,324.5])",
  "lineTo([73,331.5])",
  "stroke([])",
  "globalAlpha=0.3",
  "fillStyle=#44f",
  "fillRect([72,375.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,373,10,10])",
  "strokeRect([115,373,10,10])",
  "fillStyle=#fa0",
  "fillRect([95,369.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,370,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,367.5,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,368,4,4])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,427.5,48,5])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,425,10,10])",
  "strokeRect([115,425,10,10])",
  "fillStyle=#fa0",
  "fillRect([112,422.5,2,3])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([112.5,423,1,2])",
  "fillStyle=#fa0",
  "fillRect([115,420.5,2,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([115.5,421,1,4])",
  "fillStyle=#fa0",
  "fillRect([118,418.5,2,7])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([118.5,419,1,6])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([120,475])",
  "lineTo([127,482])",
  "lineTo([120,489])",
  "lineTo([113,482])",
  "fill([])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "stroke([])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,531.5,48,5])",
  "fillRect([72,530.5,2,7])",
  "fillRect([118,530.5,2,7])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,529,10,10])",
  "strokeRect([115,529,10,10])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,583.5,48,5])",
  "fillRect([72,588.5,3,1])",
  "fillRect([117,588.5,3,1])",
  "globalAlpha=1",
  "strokeStyle=#5a5a5a",
  "lineWidth=1",
  "strokeRect([67,581,10,10])",
  "strokeRect([115,581,10,10])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "beginPath([])",
  "moveTo([72,118])",
  "lineTo([120,118])",
  "moveTo([120,222])",
  "lineTo([84,222])",
  "stroke([])",
  "setLineDash([[]])",
  "fillStyle=#fff",
  "fillRect([80.5,218.5,7,7])",
  "strokeStyle=#0b0b0b",
  "lineWidth=1.5",
  "strokeRect([80.5,218.5,7,7])",
  "lineWidth=1",
  "fillStyle=#fff",
  "fillRect([115,113,10,10])",
  "strokeStyle=#0b0b0b",
  "lineWidth=2",
  "strokeRect([115,113,10,10])",
  "lineWidth=1",
  "strokeStyle=#dd1",
  "lineWidth=2",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,664])",
  "stroke([])",
  "strokeStyle=#f00",
  "lineWidth=1.5",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([113.5,0])",
  "lineTo([113.5,664])",
  "stroke([])",
  "setLineDash([[]])",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A100 Excavate",96,54.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A110 Piling",96,106.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A120 Steel",96,158.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A130 Cladding",96,210.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A140 Fit-out",96,262.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A150 M&E",96,314.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A160 Roof",96,366.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A170 Crane",96,418.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["M1 Handover",120,470.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["LOE Supervision",96,522.5])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["Substructure",96,574.5])",
  "textAlign=left",
  "strokeStyle=#0af",
  "lineWidth=2",
  "strokeRect([70,113.5,52,9])",
  "fillStyle=#0af",
  "fillRect([69,115,6,6])",
  "fillRect([117,115,6,6])",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > holds its per-method call totals 1`] = `
{
  "beginPath": 19,
  "clearRect": 1,
  "fill": 6,
  "fillRect": 50,
  "fillText": 11,
  "lineTo": 127,
  "moveTo": 103,
  "setLineDash": 11,
  "setTransform": 1,
  "stroke": 14,
  "strokeRect": 29,
}
`;
